--- a/index.ejs
+++ b/index.ejs
@@ -11,7 +11,10 @@
         <div class="header-contents">
             <div class="menu">menu</div>
             <div class="menu-options">menu-options</div>
-            <div class="formula">formula</div>
+            <div class="formula">formula
+                <input class = "address" type="text" value = "value" readonly>
+                <input class = "input-formula" type="text">
+            </div>
         </div>
     </header>
     <div class="cells">
