in fat arrow function this keyword remains same throughout its lifecycle

--- a/index.ejs
+++ b/index.ejs
@@ -12,11 +12,14 @@
             <div class="menu">menu</div>
             <div class="menu-options">menu-options</div>
             <div class="formula">formula
-                <input class = "address" type="text" value = "value" readonly>
+                <input class = "addressBar" type="text" value = "address bar" readonly>
                 <input class = "input-formula" type="text">
             </div>
         </div>
     </header>
+    <p>im p tag</p>
+    <p>im p tag</p>
+    
     <div class="cells">
         <% for(let i=0;i<100;i++) {  %>
             <div class="row">
@@ -29,6 +32,6 @@
     <footer>
         <div class="footer">footer</div>
     </footer>
-<script src="./script.js"></script>
 </body>
+<script src="./script.js"></script>
 </html>
