--- a/index.ejs
+++ b/index.ejs
@@ -13,13 +13,10 @@
             <div class="menu-options">menu-options</div>
             <div class="formula">formula
                 <input class = "addressBar" type="text" value = "address bar" readonly>
-                <input class = "input-formula" type="text">
+                <input class = "input-formula" type="text", placeholder="ex.( A1 + B1 )">
             </div>
         </div>
     </header>
-    <p>im p tag</p>
-    <p>im p tag</p>
-    
     <div class="cells">
         <% for(let i=0;i<100;i++) {  %>
             <div class="row">
