--- a/style.css
+++ b/style.css
@@ -1,42 +1,141 @@
-*{
+/* border-box , padding */
+* {
     box-sizing: border-box;
-}
-html, body{
+  }
+  
+  html,
+  body {
     margin: 0px;
     padding: 0px;
-}
-header{
-
-}
-.header-contents{
-
-}
-.menu{
-    border: 1px solid;
+  }
+  .menu-container {
+    border: 1px solid blue;
     height: 30px;
-}
-.menu-options{
-    border: 1px solid;
-    height: 30px;
-}
-.formula{
-    border: 1px solid;
-    height: 30px;
-}
-.cells{
-    border: 1px solid;
-    height: calc(100vh - 120px);
-    overflow: scroll;
-}
-.footer{
-    border: 1px solid;
-    height: 30px;
-}
-.row{
     display: flex;
-}
-.cell{
+  }
+  .menu-container div {
+    margin: 2px;
+  }
+  .menu-options {
+    /* border: 1px solid red; */
+    height: 60px;
+  }
+  .menu-options div {
+    margin: 2px;
+  }
+  .formula-tab {
+    border: 1px solid green;
+    height: 30px;
+  }
+  #address{
+    width: 114px;
+  }
+  #formula-input{
+    width: 152px;
+  }
+  
+  .content {
+    height: calc(100vh - 140px);
+    overflow: auto;
+    position: relative;
+  }
+  .sheets {
+    border: 1px solid blue;
+    height: 30px;
+  }
+  .row {
+    display: flex;
+  }
+  .cell {
     border: 1px solid;
-    min-width: 75px;
-    min-height: 20px;
-}
+    min-width: 70px;
+    max-width: 70px;
+    text-align: center;
+  }
+  .top-left-cell {
+      border: 1px solid gray;
+      height: 20px;
+      width: 30px;
+      background: gray;
+      position: absolute;
+      z-index: 3;
+  }
+  .cells {
+      position: absolute;
+      top: 20px;
+      z-index: 1;
+      left: 30px;
+  }
+  .left-col {
+      position: absolute;
+      z-index: 2;
+      top: 20px;
+      background: #2ecc71;
+  }
+  .left-col .left-cell {
+    border: 1px solid;
+    width: 30px;
+    text-align: center;
+  }
+  .top-row {
+      display: flex;
+      position: absolute;
+      top: 0px;
+      left: 30px;
+      z-index: 2;
+      background: #2ecc71;
+  }
+  .top-row .top-cell{
+      border: 1px solid;
+    min-width: 70px;
+    max-width: 70px;
+    text-align: center;
+  }
+  .cell-address {
+  }
+  .formula {
+  }
+  
+  .file {
+  }
+  .home {
+  }
+  .file-menu-options {
+    display: none;
+  }
+  .home-menu-options {
+      display: none;
+    }
+  .file-menu-options.active{
+      display: flex;
+    }
+  
+  .home-menu-options.active{
+    display: flex;
+    height: 100%;
+    width: 450px;
+    justify-content: space-evenly;
+    align-items: center;
+    }
+  
+    .formatting{
+  
+    }
+    .font-selector{
+  
+    }
+    .font-styler{
+  
+    }
+    .styling{
+  
+    }
+    .font-size{
+  
+    }
+    .color{
+  
+    }
+    .alignment{
+  
+    }
