--- a/index.ejs
+++ b/index.ejs
@@ -14,6 +14,8 @@
     <div class="menu-container">
       <div class="file" id="file">File</div>
       <div class="home" id="home">Home</div>
+      <div class="view" id="view">View</div>
+      <div class="help" id="help">Help</div>
     </div>
     <div class="menu-options">
       <div class="file-menu-options active">
@@ -75,14 +77,14 @@
       <!-- Top row -->
       <div class="top-row" id="top-row">
         <%for(let i=0 ; i<26 ; i++){%>
-        <div class="top-cell"><%= String.fromCharCode(i+65)%></div>
+        <div class="top-cell" id = "top-row-<%= i%>"><%= String.fromCharCode(i+65)%></div>
         <%}%>
       </div>
 
       <!-- Left Column -->
       <div class="left-col" id="left-col">
         <%for(let i=1 ; i<=100 ; i++){%>
-        <div class="left-cell"><%= i%></div>
+        <div class="left-cell" id = "left-cell-<%= i%>" ><%= i%></div>
         <%}%>
       </div>
 
@@ -109,5 +111,6 @@
   </body>
 
   <!-- Scripts -->
+  
   <script src="./script.js"></script>
 </html>
