--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   }
   .menu-options {
     /* border: 1px solid red; */
-    height: 60px;
+    height: auto;
   }
   .menu-options div {
     margin: 2px;
@@ -107,12 +107,17 @@
       display: none;
     }
   .file-menu-options.active{
-      display: flex;
+    display: flex;
+    height: 45px;
+    border: 1px solid;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
     }
   
   .home-menu-options.active{
     display: flex;
-    height: 100%;
+    height: 45px;
     width: 450px;
     justify-content: space-evenly;
     align-items: center;
@@ -138,4 +143,85 @@
     }
     .alignment{
   
+    }
+    .row-col-highlighter{
+      background-color: aqua;
+    }
+    #home{
+      border: 1px solid;
+      width: 70px;
+      border-radius: 22px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #d5f4e6;
+      color: #50394c;
+      font-size: larger;
+      transition: transform 0.2s;
+    }
+    #file{
+      border: 1px solid;
+      width: 70px;
+      border-radius: 22px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #d5f4e6;
+      color: #50394c;
+      font-size: larger;
+      transition: transform 0.2s;
+    }
+    #view{
+      border: 1px solid;
+      width: 70px;
+      border-radius: 22px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #d5f4e6;
+      color: #50394c;
+      font-size: larger;
+      transition: transform 0.2s;
+    }
+    #help{
+      border: 1px solid;
+      width: 70px;
+      border-radius: 22px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #d5f4e6;
+      color: #50394c;
+      font-size: larger;
+      transition: transform 0.2s;
+    }
+    #home:hover{
+      transform: scale(1.2);
+      color: brown;
+    }
+    #file:hover{
+      transform: scale(1.2);
+      
+      color: brown;
+    }
+    #view:hover{
+      transform: scale(1.2);
+      color: brown;
+    }
+    #help:hover{
+      transform: scale(1.2);
+      color: brown;
+    }
+    .selected-menu{
+      color: brown !important;
+      transform: scale(1.2);
+    }
+    #new{
+
+    }
+    #open{
+
+    }
+    #save{
+
     }
