--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
     padding: 0px;
   }
   .menu-container {
-    border: 1px solid blue;
+    border: 1px solid ;
+    border-color: lightgray;
+    background-color: lightgray;
     height: 30px;
     display: flex;
   }
@@ -17,14 +19,18 @@
     margin: 2px;
   }
   .menu-options {
-    /* border: 1px solid red; */
+    border: 1px solid ;
+    border-color: lightgray;
+    background-color: lightgray;
     height: auto;
   }
   .menu-options div {
     margin: 2px;
   }
   .formula-tab {
-    border: 1px solid green;
+    border: 1px solid ;
+    border-color: lightgray;
+    background-color: lightgray;
     height: 30px;
   }
   #address{
@@ -70,7 +76,7 @@
       position: absolute;
       z-index: 2;
       top: 20px;
-      background: #2ecc71;
+      background: darkgreen;
   }
   .left-col .left-cell {
     border: 1px solid;
@@ -83,7 +89,7 @@
       top: 0px;
       left: 30px;
       z-index: 2;
-      background: #2ecc71;
+      background: darkgreen;
   }
   .top-row .top-cell{
       border: 1px solid;
@@ -109,16 +115,16 @@
   .file-menu-options.active{
     display: flex;
     height: 45px;
-    border: 1px solid;
-    width: fit-content;
-    justify-content: center;
+    /* border: 1px solid; */
+    width: 342px;
+    justify-content: space-evenly;
     align-items: center;
     }
   
   .home-menu-options.active{
     display: flex;
     height: 45px;
-    width: 450px;
+    width: 675px;
     justify-content: space-evenly;
     align-items: center;
     }
@@ -145,7 +151,7 @@
   
     }
     .row-col-highlighter{
-      background-color: aqua;
+      background-color: brown;
     }
     #home{
       border: 1px solid;
@@ -154,8 +160,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #d5f4e6;
-      color: #50394c;
+      background-color: darkblue;
+      color: white;
       font-size: larger;
       transition: transform 0.2s;
     }
@@ -166,8 +172,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #d5f4e6;
-      color: #50394c;
+      background-color: darkblue;
+      color: white;
       font-size: larger;
       transition: transform 0.2s;
     }
@@ -178,8 +184,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #d5f4e6;
-      color: #50394c;
+      background-color: darkblue;
+      color: white;
       font-size: larger;
       transition: transform 0.2s;
     }
@@ -190,38 +196,129 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #d5f4e6;
-      color: #50394c;
+      background-color: darkblue;
+      color: white;
       font-size: larger;
       transition: transform 0.2s;
     }
     #home:hover{
       transform: scale(1.2);
-      color: brown;
     }
     #file:hover{
       transform: scale(1.2);
-      
-      color: brown;
     }
     #view:hover{
       transform: scale(1.2);
-      color: brown;
     }
     #help:hover{
       transform: scale(1.2);
-      color: brown;
     }
     .selected-menu{
-      color: brown !important;
       transform: scale(1.2);
     }
     #new{
-
+      border: 1px solid;
+    height: 30px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 35px;
+    background-color: white;
+    color: #991eeb;
     }
     #open{
-
+      border: 1px solid;
+    height: 30px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 35px;
+    background-color: white;
+    color: #991eeb ;
     }
     #save{
-
+      border: 1px solid;
+    height: 30px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 35px;
+    background-color: white;
+    color: #991eeb;
     }
+    #new:hover{
+      background-color: #991eeb;
+      color: white;
+    }
+    #open:hover{
+      background-color: #991eeb;
+      color: white;
+    }
+    #save:hover{
+      background-color: #991eeb;
+      color: white;
+    }
+    #font{
+      color: #991eeb;
+      border-color: #991eeb;
+    }
+    #fontsize{
+      color: #991eeb;
+      border-color: #991eeb;
+    }
+    #left{
+      color: #991eeb;
+      border-color: #991eeb;
+    }
+    #center{
+      color: #991eeb;
+      border-color: #991eeb;
+    }
+    #right{
+      color: #991eeb;
+      border-color: #991eeb;
+    }
+    #left:hover{
+      transform: scale(1.2);
+    }
+    #center:hover{
+      transform: scale(1.2);
+    }
+    #right:hover{
+      transform: scale(1.2);
+    }
+    
+    #bold{
+      color: #991eeb;
+      border-color: #991eeb;
+      background-color: white;
+    }
+    #underline{
+      color: #991eeb;
+      border-color: #991eeb;
+      background-color: white;
+    }
+    #italic{
+      color: #991eeb;
+      border-color: #991eeb;
+      background-color: white;
+    }
+    #fontcolor{
+      color: #991eeb;
+      border-color: #991eeb;
+      background-color: white;
+    }
+    #cellcolor{
+      color: #991eeb;
+      border-color: #991eeb;
+      background-color: white;
+    }
+    .alignment{
+      display: flex;
+      justify-content: space-around;
+      width: 90px;
+    }
+    
