--- a/index.ejs
+++ b/index.ejs
@@ -11,12 +11,9 @@
 
   <body>
     <!-- Menu -->
-    
     <div class="menu-container">
-      <div class="file selected-menu" id="file">File</div>
+      <div class="file" id="file">File</div>
       <div class="home" id="home">Home</div>
-      <div class="view" id="view">View</div>
-      <div class="help" id="help">Help</div>
     </div>
     <div class="menu-options">
       <div class="file-menu-options active">
@@ -44,27 +41,21 @@
         <div class="styling">
           <div class="font-size">
             <select name="fontsize" id="fontsize">
-              <option value="16">Font Size 10</option>
-              <option value="34">Font Size 12</option>
-              <option value="50">Font Size 14</option>
-              <option value="69">Font Size 16</option>
+              <option value="10">10</option>
+              <option value="10">12</option>
+              <option value="10">14</option>
+              <option value="10">16</option>
             </select>
           </div>
           <div class="color">
-            <input type="color" name="fontcolor" id="fontcolor"></input>
-            <input type="color" name="cellcolor" id="cellcolor"></input>
+            <input type="color" name="fontcolor" id="fontcolor" />
+            <input type="color" name="cellcolor" id="cellcolor" />
           </div>
         </div>
         <div class="alignment">
-          <div id="left">
-            <i class="fas fa-align-left"></i>
-          </div>
-          <div id="center">
-            <i class="fas fa-align-center"></i>
-          </div>
-          <div id="right">
-            <i class="fas fa-align-right"></i>
-          </div>
+          <input type="button" id="left" value="L" />
+          <input type="button" id="center" value="C" />
+          <input type="button" id="right" value="R" />
         </div>
       </div>
     </div>
@@ -84,14 +75,14 @@
       <!-- Top row -->
       <div class="top-row" id="top-row">
         <%for(let i=0 ; i<26 ; i++){%>
-        <div class="top-cell" id = "top-row-<%= i%>"><%= String.fromCharCode(i+65)%></div>
+        <div class="top-cell"><%= String.fromCharCode(i+65)%></div>
         <%}%>
       </div>
 
       <!-- Left Column -->
       <div class="left-col" id="left-col">
         <%for(let i=1 ; i<=100 ; i++){%>
-        <div class="left-cell" id = "left-cell-<%= i%>" ><%= i%></div>
+        <div class="left-cell"><%= i%></div>
         <%}%>
       </div>
 
@@ -118,6 +109,5 @@
   </body>
 
   <!-- Scripts -->
-  <script src="https://kit.fontawesome.com/cc52f1c2ec.js" crossorigin="anonymous"></script>
   <script src="./script.js"></script>
 </html>
