--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@
     padding: 0px;
   }
   .menu-container {
-    border: 1px solid ;
-    border-color: lightgray;
-    background-color: lightgray;
+    border: 1px solid blue;
     height: 30px;
     display: flex;
   }
@@ -19,27 +17,16 @@
     margin: 2px;
   }
   .menu-options {
-    border: 1px solid ;
-    border-color: lightgray;
-    background-color: lightgray;
-    height: auto;
+    /* border: 1px solid red; */
+    height: 60px;
   }
   .menu-options div {
     margin: 2px;
   }
   .formula-tab {
-    border: 1px solid ;
-    border-color: lightgray;
-    background-color: lightgray;
+    border: 1px solid green;
     height: 30px;
   }
-  #address{
-    width: 114px;
-  }
-  #formula-input{
-    width: 152px;
-  }
-  
   .content {
     height: calc(100vh - 140px);
     overflow: auto;
@@ -76,7 +63,7 @@
       position: absolute;
       z-index: 2;
       top: 20px;
-      background: darkgreen;
+      background: #2ecc71;
   }
   .left-col .left-cell {
     border: 1px solid;
@@ -89,7 +76,7 @@
       top: 0px;
       left: 30px;
       z-index: 2;
-      background: darkgreen;
+      background: #2ecc71;
   }
   .top-row .top-cell{
       border: 1px solid;
@@ -113,18 +100,13 @@
       display: none;
     }
   .file-menu-options.active{
-    display: flex;
-    height: 45px;
-    /* border: 1px solid; */
-    width: 342px;
-    justify-content: space-evenly;
-    align-items: center;
+      display: flex;
     }
   
   .home-menu-options.active{
     display: flex;
-    height: 45px;
-    width: 675px;
+    height: 100%;
+    width: 450px;
     justify-content: space-evenly;
     align-items: center;
     }
@@ -150,175 +132,3 @@
     .alignment{
   
     }
-    .row-col-highlighter{
-      background-color: brown;
-    }
-    #home{
-      border: 1px solid;
-      width: 70px;
-      border-radius: 22px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: darkblue;
-      color: white;
-      font-size: larger;
-      transition: transform 0.2s;
-    }
-    #file{
-      border: 1px solid;
-      width: 70px;
-      border-radius: 22px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: darkblue;
-      color: white;
-      font-size: larger;
-      transition: transform 0.2s;
-    }
-    #view{
-      border: 1px solid;
-      width: 70px;
-      border-radius: 22px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: darkblue;
-      color: white;
-      font-size: larger;
-      transition: transform 0.2s;
-    }
-    #help{
-      border: 1px solid;
-      width: 70px;
-      border-radius: 22px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: darkblue;
-      color: white;
-      font-size: larger;
-      transition: transform 0.2s;
-    }
-    #home:hover{
-      transform: scale(1.2);
-    }
-    #file:hover{
-      transform: scale(1.2);
-    }
-    #view:hover{
-      transform: scale(1.2);
-    }
-    #help:hover{
-      transform: scale(1.2);
-    }
-    .selected-menu{
-      transform: scale(1.2);
-    }
-    #new{
-      border: 1px solid;
-    height: 30px;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 35px;
-    background-color: white;
-    color: #991eeb;
-    }
-    #open{
-      border: 1px solid;
-    height: 30px;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 35px;
-    background-color: white;
-    color: #991eeb ;
-    }
-    #save{
-      border: 1px solid;
-    height: 30px;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 35px;
-    background-color: white;
-    color: #991eeb;
-    }
-    #new:hover{
-      background-color: #991eeb;
-      color: white;
-    }
-    #open:hover{
-      background-color: #991eeb;
-      color: white;
-    }
-    #save:hover{
-      background-color: #991eeb;
-      color: white;
-    }
-    #font{
-      color: #991eeb;
-      border-color: #991eeb;
-    }
-    #fontsize{
-      color: #991eeb;
-      border-color: #991eeb;
-    }
-    #left{
-      color: #991eeb;
-      border-color: #991eeb;
-    }
-    #center{
-      color: #991eeb;
-      border-color: #991eeb;
-    }
-    #right{
-      color: #991eeb;
-      border-color: #991eeb;
-    }
-    #left:hover{
-      transform: scale(1.2);
-    }
-    #center:hover{
-      transform: scale(1.2);
-    }
-    #right:hover{
-      transform: scale(1.2);
-    }
-    
-    #bold{
-      color: #991eeb;
-      border-color: #991eeb;
-      background-color: white;
-    }
-    #underline{
-      color: #991eeb;
-      border-color: #991eeb;
-      background-color: white;
-    }
-    #italic{
-      color: #991eeb;
-      border-color: #991eeb;
-      background-color: white;
-    }
-    #fontcolor{
-      color: #991eeb;
-      border-color: #991eeb;
-      background-color: white;
-    }
-    #cellcolor{
-      color: #991eeb;
-      border-color: #991eeb;
-      background-color: white;
-    }
-    .alignment{
-      display: flex;
-      justify-content: space-around;
-      width: 90px;
-    }
-    
